# rust-hamlib-client

./: .gitignore  .licensure.yml  Cargo.toml  README.md
.github/workflows/: tests.yml
src/: adif.rs  error.rs  lib.rs  mode.rs  vfo.rs
src/commands/: get_freq.rs  get_info.rs  get_mode.rs  get_split_freq.rs  get_split_mode.rs  get_split_vfo.rs  get_vfo.rs  mod.rs
